[project]
name = "okun-law"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Juliette Bornier", email = "juliette.bornier.3110@gmail.com" },
]
dependencies = ["streamlit>=1.36.0", "pandas", "numpy", "plotly", "dbnomics"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["src/okun_law/images/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/okun_law"]
