[project]
name = "okuns-law"
version = "0.1.0"
description = "Okun's Law dashboard with DBnomics data"
authors = [
    { name = "Juliette Bornier", email = "juliette.bornier.3110@gmail.com" },
]
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "plotly>=5.22.0",
    "dbnomics>=1.2.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.5.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/okuns_law"]
